Added DELETE for deliveries endpoint.
